--- a/src/app/encryption-algorithm/encryption-algorithm.component.html
+++ b/src/app/encryption-algorithm/encryption-algorithm.component.html
@@ -5,6 +5,9 @@
     <mat-tab label="DES">
         <app-des></app-des>
     </mat-tab>
+    <mat-tab label="RSA">
+        <app-rsa></app-rsa>
+    </mat-tab>
     <mat-tab label="...">
         <h2>Waiting to be added......</h2>
     </mat-tab>
