--- a/src/app/encryption-algorithm/encryption-algorithm.component.html
+++ b/src/app/encryption-algorithm/encryption-algorithm.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group class="mat-tab-group">
+<mat-tab-group class="mat-tab-group" [(selectedIndex)]='index' (selectedTabChange)="indexChanged()" >
     <mat-tab label="Playfair">
         <app-playfair></app-playfair>
     </mat-tab>
