--- a/src/app/encryption-algorithm/rsa/rsa.component.html
+++ b/src/app/encryption-algorithm/rsa/rsa.component.html
@@ -1,25 +1,27 @@
 <div>
     <mat-form-field class="input_text" appearance="fill">
         <mat-label class="mat-label">Text:</mat-label>
-        <textarea matInput placeholder="text awaiting encryption or decryption."
-            [(ngModel)]="toBeProceessed"></textarea>
+        <textarea matInput placeholder="text awaiting encryption or decryption." 
+            [(ngModel)]="toBeProceessed" (change)="setStorage()"></textarea>
     </mat-form-field>
 </div>
 <div>
     <p></p>
 </div>
-<mat-form-field class="input_key" appearance="fill">
+<mat-form-field class="input_key" appearance="fill" on>
     <mat-label class="mat-label">Secret Key:</mat-label>
-    <input matInput placeholder="secret key." [(ngModel)]="secretKey">
+    <input matInput placeholder="secret key." [(ngModel)]="secretKey" (change)="setStorage()">
 </mat-form-field>
 <br>
 <mat-form-field class="input_key" appearance="fill">
     <mat-label class="mat-label">Public Key:</mat-label>
-    <input matInput placeholder="public key." [(ngModel)]="publicKey">
+    <input matInput placeholder="public key." [(ngModel)]="publicKey" (change)="setStorage()">
 </mat-form-field>
 
-<!-- <button mat-stroked-button color="primary" (click)="genMatrix()">Generate Matrix</button> -->
-<button mat-stroked-button color="primary" (click)="generate()">Encrypt</button>
-<!-- <button mat-stroked-button color="primary" (click)="encrypt()">Encrypt</button>
-<button mat-stroked-button color="primary" (click)="decrypt()">Decrypt</button> -->
+
+<button mat-stroked-button color="primary" (click)="generate()">Generate Keypair</button>
+<button mat-stroked-button color="primary" (click)="encrypt()">Encrypt</button>
+<button mat-stroked-button color="primary" (click)="decrypt()">Decrypt</button>
 <button mat-stroked-button color="primary" (click)="clear()">Clear</button>
+
+<mat-spinner class="mat-spinner"></mat-spinner>
